[package]
name = "dorc"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"
description = "devin's orchestrator - a stupid deployment utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
dialoguer = "0.8.0"
sudo = "0.6.0"

unix-named-pipe = "0.2.0"

tokio = { version = "1", features = ["full"]}
futures = "0.3.15"

toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0"
fs_extra = "1.2.0"

systemd_unit = "0.0.3"

anyhow = "1.0.41"


[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
