[package]
name = "dorc-daemon"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full"]}
futures = "0.3.15"
unix-named-pipe = "0.2.0"